Change the CNodeAccessControlTest to junit 4.